Fixed Layout Issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
-body {
+body, html {
   margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  height: inherit;
 }
